# YtDownloaderQt

./: .gitignore  InstallerScript.iss  VideoElement.ui  Worker.cpp  Worker.h  YtDownloader.pro  main.cpp  videoelement.h.LreuhS  videolistelement.cpp  videolistelement.h  videolistelement.ui  ytdownloader.cpp  ytdownloader.h  ytdownloader.ui
YotubeDownloaderControl/: CMakeLists.txt  library.h
YtDlpWrapper/: CMakeLists.txt  DonwloadRequestBuilder.cpp  DonwloadRequestBuilder.h  DownloadRequest.cpp  DownloadRequest.h  ExecutionResult.h  Executor.cpp  Executor.h  JsonParser.h  Logger.cpp  Logger.h  YoutubeDownloader.cpp  YoutubeDownloader.h  YoutubeVideo.cpp  YoutubeVideo.h  YtDlmCommand.h  YtDlmCommandBuilder.h  library.cpp  main.cpp
YtDownloader/: CMakeLists.txt
YtDownloaderControl/: CMakeLists.txt  Executor.h  JsonParser.h  LIbTest.cpp  Logger.cpp  YoutubeDownloader.h  YtDlmCommand.cpp  YtDlmCommandBuilder.cpp  library.h  test2.txt
YtDownloaderController/YtDownloaderController/: ExecutionResult.cpp  Executor.cpp  JsonParser.cpp  Logger.h  YoutubeDownloader.cpp  YoutubeDownloader.h  YoutubeVideo.cpp  YoutubeVideo.h  YtDownloaderController.cpp  main.cpp  test.txt
YtDownloaderController/YtDownloaderController/YtDownlo.bc2303a0/x64/Debug/: YtDownloaderController.exe.recipe
YtDownloaderController/YtDownloaderController/YtDownlo.bc2303a0/x64/Debug/YtDownlo.bc2303a0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  YtDownloaderController.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
